fix issue preventing the flip from displaying correctly on mobile by adding webkit to css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -471,6 +471,7 @@
 /* positioning front and back of the card*/
 .yoga-card-front,
 .yoga-card-back {
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     overflow: hidden;
     width: 100%;
